issue for closing sideNav on mobile resolved

--- a/resources/scrapFolder/index.scss
+++ b/resources/scrapFolder/index.scss
@@ -224,14 +224,26 @@ button:hover {
 
 .sideNav {
     transition: 0.25s ease-in-out;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: -400px;
     transform: translateX(0px);
     z-index: 10;
     height: 100vh;
     width: 400px;
+    max-width: 100vw;
     background-color: #001319;
+    .sideNav-top {
+        max-height: 100px;
+        min-height: 100px;
+        img {
+            position: absolute;
+            top: 40px;
+            z-index: 100;
+            left: 75%;
+            max-height: 50px;
+        }
+    }
     ul {
         padding-left: 30px;
         :nth-child(4) {
